# wanted_potentup

./: main.py  pyproject.toml
new_project/: pyproject.toml
python/: 01_파이썬_기초_문법(변수,자료형).ipynb  01_파이썬_기초_문법(변수,자료형)_blank.ipynb  02_파이썬_기초_문법(제어문)_blank.ipynb  03_파이썬_기초_문법(함수)_blank.ipynb  04_넘파이.ipynb  04_실습.ipynb
python/data/: mytext.txt
wanted_potentup/my-project/: 01_파이썬_기초_문법(변수,자료형)_blank.ipynb  pyproject.toml  test2.ipynb
wanted_potentup/my-project/my_project.egg-info/: PKG-INFO  SOURCES.txt
wanted_potentup/my-project/python/: test.ipynb
wanted_potentup/prep/: main.py  week2_test_answer_hwang_hwa_in.ipynb  week3.ipynb  week3_test_answer_hwang_hwa_in.ipynb  week4.ipynb  week4_test_answer_hwang_hwa_in copy.ipynb
