[project]
name = "wanted-potentup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
]

[tool.uv.workspace]
members = [
    "wanted_potentup/my-project",
]
